Corrección de los Títulos.
Se corrigieron los títulos de las páginas web de los ejercicios.

--- a/Taller 1 - Figuras Geométricas/triangulo_isoceles.html
+++ b/Taller 1 - Figuras Geométricas/triangulo_isoceles.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-        <title>Triángulo Isóceles</title>
+        <title>Taller 1 (extra): Triángulo Isóceles</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet"> 
