--- a/Taller 2 - Porcentajes y Descuentos/porcentajes_y_descuentos.html
+++ b/Taller 2 - Porcentajes y Descuentos/porcentajes_y_descuentos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-        <title>Porcentajes y Descuentos</title>
+        <title>Taller 2: Porcentajes y Descuentos</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet"> 
